--- a/template/partial/future.tmpl
+++ b/template/partial/future.tmpl
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="text-area">
             <div class="title add-animation">
-                <h2>Numbers don't lie</h2>
+                <h2>人工智能</h2>
                 <div class="separator-container">
                     <div class="separator line-separator">∎</div>
                 </div>
