--- a/template/partial/menu.tmpl
+++ b/template/partial/menu.tmpl
@@ -95,16 +95,16 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right navbar-uppercase">
             <li class="social-links">
-                <a href="https://www.facebook.com/CreativeTim">
+                <a href="https://www.facebook.com/zhxiaowen">
                     <i class="fa fa-facebook-square"></i>
                 </a>
-                <a href="https://twitter.com/CreativeTim">
+                <a href="https://twitter.com/z_xiaowen">
                     <i class="fa fa-twitter"></i>
                 </a>
-                <a href="https://plus.google.com/+CreativetimPage">
+                <a href="https://plus.google.com/115766270032230225035">
                     <i class="fa fa-google-plus-square"></i>
                 </a>
-                <a href="https://dribbble.com/creativetim">
+                <a href="https://dribbble.com/zhangxiaowen">
                     <i class="fa fa-dribbble"></i>
                 </a>
             </li>
@@ -153,5 +153,31 @@
     <!-- /.navbar-collapse -->
 </div>
 </nav>
+
+{{end}}
+
+<!--首页主题显示内容-->
+{{define "homesection"}}
+
+<div class="section section-header">
+            <div class="parallax pattern-image">
+                <img src="static/sensingicon/bg_body.jpg?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" style="transform: translate3d(0px, 147px, 0px);">
+                <!--<img src="/assets/img/header6.jpg"/>-->
+                <div class="container">
+                    <div class="content">
+                        <h1>SENSING TECH</h1>
+                        <div class="separator-container">
+                            <div class="separator line-separator">∎</div>
+                        </div>
+                        <h5>北京深醒科技有限公司成立于2016年1月,</h5>
+						<h5>是一家从事人工智能方向，集研发、生产和销售为一体的高科技公司，以人脸识别技术切入AI战场。</h5>
+                        <h5>成立近一年来，已为安防监控、金融、地产、学校、医院等领域提供多种解决方案。</h5>
+                    </div>
+                </div>
+            </div>
+            <a href="" data-scroll="true" data-id="#whoWeAre" class="scroll-arrow hidden-xs hidden-sm">
+                <i class="fa fa-angle-down"></i>
+            </a>
+        </div>
 
 {{end}}
