--- a/template/partial/team.tmpl
+++ b/template/partial/team.tmpl
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="member add-animation animation-1">
-                        <img class="img-circle" src="assets/img/elena.jpg">
+                        <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
                             <h3 class="big-text">Elena Conacel </h3>
                             <br>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="member add-animation animation-2">
-                        <img class="img-circle" src="assets/img/diana.png">
+                        <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
                             <h3 class="big-text">Diana Caliman </h3>
                             <br>
@@ -42,7 +42,7 @@
                         <div class="social-buttons hidden-xs">
                             <a target="_blank" href="https://twitter.com/eDianaCaliman" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
                             <a target="_blank" href="https://www.linkedin.com/in/diana-caliman-751552b5" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
-                            <a target="_blank" href="https://www.facebook.com/DianaaCaliman?fref=ts" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
                         </div>
 
 
@@ -50,14 +50,14 @@
                 </div>
                 <div class="col-md-3">
                     <div class="member add-animation animation-3">
-                        <img class="img-circle" src="assets/img/alex.png">
+                        <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
                             <h3 class="big-text">Alex Paduraru</h3>
                             <br>
                             <p class="small-text">Alex is one of the co-founders and drives the technical strategy of the platform, customer support and brand. He is level-headed, smart and with a taste for simple, aesthetic design.</p>
                         </div>
                         <div class="social-buttons hidden-xs">
-                            <a target="_blank" href="https://www.facebook.com/axelut?fref=ts" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
                             <a target="_blank" href="https://twitter.com/Axelut" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
                             <a target="_blank" href="https://www.linkedin.com/in/alexpaduraru" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
                         </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="member add-animation animation-4">
-                        <img class="img-circle" src="assets/img/beni.jpg">
+                        <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
                             <h3 class="big-text">Beniamin Marcu</h3>
                             <br>
@@ -77,7 +77,7 @@
                         <div class="social-buttons hidden-xs">
                             <a target="_blank" href="https://twitter.com/marcu_beniamin" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
                             <a target="_blank" href="https://www.linkedin.com/in/beniamin-marcu-52856947" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
-                            <a target="_blank" href="https://www.facebook.com/beniamin.marcu.1?fref=ts" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
                         </div>
                     </div>
                 </div>
