--- a/template/partial/tech.tmpl
+++ b/template/partial/tech.tmpl
@@ -3,7 +3,7 @@
 <div class="section section-clients-2" id="tech">
     <div class="container">
         <div class="title add-animation">
-            <h2>What people think...</h2>
+            <h2>我们的技术</h2>
             <div class="separator-container">
                 <div class="separator line-separator">∎</div>
             </div>
