--- a/template/partial/whoweare.tmpl
+++ b/template/partial/whoweare.tmpl
@@ -23,29 +23,29 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card add-animation animation-2 animate">
-                            <img alt="..." src="/assets/img/pic10.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                         <div class="card add-animation animation-4">
-                            <img alt="..." src="/assets/img/pic6.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card add-animation animation-1 animate">
-                            <img alt="..." src="/assets/img/pic11.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                         <div class="card add-animation animation-3">
-                            <img alt="..." src="/assets/img/pic1.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                         <div class="card add-animation animation-2">
-                            <img alt="..." src="/assets/img/pic9.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card add-animation animation-3 animate">
-                            <img alt="..." src="/assets/img/pic2.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                         <div class="card add-animation animation-1">
-                            <img alt="..." src="/assets/img/pic4.jpg">
+                            <img alt="..." src="/static/sensingicon/demo.jpg">
                         </div>
                     </div>
                 </div>
