删除主页多余的演示内容项

--- a/template/partial/team.tmpl
+++ b/template/partial/team.tmpl
@@ -17,15 +17,18 @@
                     <div class="member add-animation animation-1">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">Elena Conacel </h3>
+                            <h3 class="big-text">袁培江</h3>
                             <br>
                             <p class="small-text">
-                                Elena is one of the co-founders and takes care of growth, product development and partnerships. She is analytical, driven and adapts easily to new conditions, while trying to keep everyone on track.
+                                袁老师 <br>
+								袁老师 <br>
+								袁老师 <br>
                             </p>
                         </div>
                         <div class="social-buttons hidden-xs">
-                            <a target="_blank" href="https://twitter.com/conacelelena" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.linkedin.com/in/elena-cristina-conacel-a89a436b" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-weixin"></i></a>
+							<a target="_blank" href="#" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-qq"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-envelope"></i></a>   
                         </div>
                     </div>
                 </div>
@@ -33,16 +36,18 @@
                     <div class="member add-animation animation-2">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">Diana Caliman </h3>
+                            <h3 class="big-text">史老师 </h3>
                             <br>
                             <p class="small-text">
-                                Diana is the person behind our social media channels, she takes care of our users' community and communication. She is ambitious, hard-working, instantly likeable and fun to be around.
+                                史老师 <br>
+								史老师 <br>
+								史老师 <br>
                             </p>
                         </div>
                         <div class="social-buttons hidden-xs">
-                            <a target="_blank" href="https://twitter.com/eDianaCaliman" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.linkedin.com/in/diana-caliman-751552b5" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
-                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-weixin"></i></a>
+							<a target="_blank" href="#" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-qq"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-envelope"></i></a>                            
                         </div>
 
 
@@ -52,14 +57,18 @@
                     <div class="member add-animation animation-3">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">Alex Paduraru</h3>
+                            <h3 class="big-text">范斌 </h3>
                             <br>
-                            <p class="small-text">Alex is one of the co-founders and drives the technical strategy of the platform, customer support and brand. He is level-headed, smart and with a taste for simple, aesthetic design.</p>
+                            <p class="small-text">
+							范斌 <br>
+							范斌 <br>
+							范斌 <br>
+							</p>
                         </div>
                         <div class="social-buttons hidden-xs">
-                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
-                            <a target="_blank" href="https://twitter.com/Axelut" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.linkedin.com/in/alexpaduraru" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
+							<a target="_blank" href="#" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-weixin"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-qq"></i></a>                            
+                            <a target="_blank" href="#" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -67,17 +76,19 @@
                     <div class="member add-animation animation-4">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">Beniamin Marcu</h3>
+                            <h3 class="big-text">李禾禾 </h3>
                             <br>
                             <p class="small-text">
-                                Beni is the guy responsible for keeping the platform in check, improving its functionality and adding new features. He is driven, always open for learning more, friendly and a fan of Ruby on Rails.
+                            李禾禾    <br>
+							李禾禾	<br>
+							李禾禾	<br>
                             </p>
                         </div>
 
                         <div class="social-buttons hidden-xs">
-                            <a target="_blank" href="https://twitter.com/marcu_beniamin" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.linkedin.com/in/beniamin-marcu-52856947" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-linkedin-square"></i></a>
-                            <a target="_blank" href="https://www.facebook.com/zhxiaowen" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-facebook-square"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-twitter btn-simple"><i class="fa fa-weixin"></i></a>
+							<a target="_blank" href="#" class="btn btn-social btn-facebook btn-simple"><i class="fa fa-qq"></i></a>
+                            <a target="_blank" href="#" class="btn btn-social btn-linkedin btn-simple"><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
