修改站点名称为Kelvin

--- a/template/index/anon.tmpl
+++ b/template/index/anon.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}深醒科技{{end}}
+{{define "title"}}Kelvin科技{{end}}
 {{define "head"}}{{end}}
 {{define "content"}}
 <div class="container">
