--- a/template/partial/team.tmpl
+++ b/template/partial/team.tmpl
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="text-area">
             <div class="title add-animation">
-                <h2>深醒团队</h2>
+                <h2>Kelvin团队</h2>
                 <div class="separator-container">
                     <div class="separator line-separator">∎</div>
                 </div>
@@ -17,12 +17,12 @@
                     <div class="member add-animation animation-1">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">袁培江</h3>
+                            <h3 class="big-text">Zhang Xiaowen</h3>
                             <br>
                             <p class="small-text">
-                                袁老师 <br>
-								袁老师 <br>
-								袁老师 <br>
+                                Zhang Xiaowen <br>
+								Zhang Xiaowen <br>
+								Zhang Xiaowen <br>
                             </p>
                         </div>
                         <div class="social-buttons hidden-xs">
@@ -36,12 +36,12 @@
                     <div class="member add-animation animation-2">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">史老师 </h3>
+                            <h3 class="big-text">Zhang Xiaowen </h3>
                             <br>
                             <p class="small-text">
-                                史老师 <br>
-								史老师 <br>
-								史老师 <br>
+                                Zhang Xiaowen <br>
+								Zhang Xiaowen <br>
+								Zhang Xiaowen <br>
                             </p>
                         </div>
                         <div class="social-buttons hidden-xs">
@@ -57,12 +57,12 @@
                     <div class="member add-animation animation-3">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">范斌 </h3>
+                            <h3 class="big-text">Zhang Xiaowen </h3>
                             <br>
                             <p class="small-text">
-							范斌 <br>
-							范斌 <br>
-							范斌 <br>
+							Zhang Xiaowen <br>
+							Zhang Xiaowen <br>
+							Zhang Xiaowen <br>
 							</p>
                         </div>
                         <div class="social-buttons hidden-xs">
@@ -76,12 +76,12 @@
                     <div class="member add-animation animation-4">
                         <img class="img-circle" src="/static/sensingicon/demo.jpg">
                         <div class="description">
-                            <h3 class="big-text">李禾禾 </h3>
+                            <h3 class="big-text">Zhang Xiaowen </h3>
                             <br>
                             <p class="small-text">
-                            李禾禾    <br>
-							李禾禾	<br>
-							李禾禾	<br>
+                            Zhang Xiaowen    <br>
+							Zhang Xiaowen	<br>
+							Zhang Xiaowen	<br>
                             </p>
                         </div>
 
