--- a/template/partial/whoweare.tmpl
+++ b/template/partial/whoweare.tmpl
@@ -6,12 +6,12 @@
         <div class="container">
             <div class="row">
                 <div class="title" id="animationTest">
-                    <h2>关于深醒科技</h2>
+                    <h2>关于Kelvin科技</h2>
                     <div class="separator-container">
                         <div class="separator line-separator">∎</div>
                     </div>
                     <p class="large">
-                        北京深醒科技有限公司成立于2016年1月，是一家从事人工智能方向，集研发、生产和销售为一体的高科技公司，以人脸识别技术切入AI战场。成立近一年来，已为安防监控、金融、地产、学校、医院等领域提供多种解决方案。
+                        北京Kelvin科技有限公司成立于2016年1月，是一家从事人工智能方向，集研发、生产和销售为一体的高科技公司，以人脸识别技术切入AI战场。成立近一年来，已为安防监控、金融、地产、学校、医院等领域提供多种解决方案。
                     </p>
                 </div>
             </div>
