--- a/template/partial/contact.tmpl
+++ b/template/partial/contact.tmpl
@@ -4,16 +4,16 @@
     <div class="contact-container">
         <div class="address-container add-animation animation-1">
             <div class="address">
-                <h4>联系深醒</h4>
+                <h4>联系Kelvin</h4>
                 <p class="text-gray">
-                    北京市，海淀区，<br>
-                    大钟寺东路9号京仪大厦B座318室
+                    北京市，朝阳区，<br>
+                    定福庄天泰定福苑
                 </p>
                 <h4>Want to say hello?</h4>
                 <a target="_blank" href="http://www.creative-tim.com/contact-us" class="btn btn-black btn-contact">
                     CONTACT US <i class="fa fa-paper-plane"></i>
                 </a>
-                <h4>感谢您对深醒的认可和关注!</h4>
+                <h4>感谢您对Kelvin的认可和关注!</h4>
 
 
                 <div class="col-md-6">
