--- a/template/partial/menu.tmpl
+++ b/template/partial/menu.tmpl
@@ -11,7 +11,7 @@
             <span class="icon-bar bar3"></span>
         </button>
         <a target="_blank" href="http://www.creative-tim.com?ref=presentation-page" class="navbar-brand">
-            SENSING TECH
+            KELVIN TECH
         </a>
     </div>
     <div class="collapse navbar-collapse">
@@ -32,17 +32,17 @@
             </li>
             <li>
                 <a href="{{.BaseURI}}about" data-scroll="true" data-id="#whoWeAre">
-                    关于深醒
+                    关于Kelvin
                 </a>
             </li>
             <li>
                 <a href="{{.BaseURI}}about" data-scroll="true" data-id="#visioning">
-                    深醒愿景
+                    愿景
                 </a>
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#follow">
-                    谁在关注 <!--谁在关注深醒：投资人-->
+                    谁在关注 <!--谁在关注：投资人-->
                 </a>
             </li>
             <li>
@@ -57,7 +57,7 @@
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#team">
-                    深醒团队
+                    Kelvin团队
                 </a>
             </li>
             <li>
@@ -67,7 +67,7 @@
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#contact">
-                    联系深醒
+                    联系Kelvin
                 </a>
             </li>
         </ul>
@@ -89,7 +89,7 @@
             <span class="icon-bar bar3"></span>
         </button>
         <a target="_blank" href="http://www.creative-tim.com?ref=presentation-page" class="navbar-brand">
-            SENSING TECH
+            Kevlin TECH
         </a>
     </div>
     <div class="collapse navbar-collapse">
@@ -110,17 +110,17 @@
             </li>
             <li>
                 <a href="{{.BaseURI}}about" data-scroll="true" data-id="#whoWeAre">
-                    关于深醒
+                    关于Kelvin
                 </a>
             </li>
             <li>
                 <a href="{{.BaseURI}}about" data-scroll="true" data-id="#visioning">
-                    深醒愿景
+                    愿景
                 </a>
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#follow">
-                    谁在关注 <!--谁在关注深醒：投资人-->
+                    谁在关注 <!--谁在关注：投资人-->
                 </a>
             </li>
             <li>
@@ -135,7 +135,7 @@
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#team">
-                    深醒团队
+                    Kelvin团队
                 </a>
             </li>
             <li>
@@ -145,7 +145,7 @@
             </li>
             <li>
                 <a href="" data-scroll="true" data-id="#contact">
-                    联系深醒
+                    联系Kelvin
                 </a>
             </li>
         </ul>
@@ -165,11 +165,11 @@
                 <!--<img src="/assets/img/header6.jpg"/>-->
                 <div class="container">
                     <div class="content">
-                        <h1>SENSING TECH</h1>
+                        <h1>Kelvin TECH</h1>
                         <div class="separator-container">
                             <div class="separator line-separator">∎</div>
                         </div>
-                        <h5>北京深醒科技有限公司成立于2016年1月,</h5>
+                        <h5>徐州Kelvin科技有限公司成立于2016年1月,</h5>
 						<h5>是一家从事人工智能方向，集研发、生产和销售为一体的高科技公司，以人脸识别技术切入AI战场。</h5>
                         <h5>成立近一年来，已为安防监控、金融、地产、学校、医院等领域提供多种解决方案。</h5>
                     </div>
